deployment/k8s/chat-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: chat-app
        image: ghcr.io/joeangry/signalr-scale:0.0.2
        
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
