deployment/k8s/debug-pod-alpine.yml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: bgd
  labels:
    name: debug-pod
spec:
  containers:
  - name: debug-pod
    image: alpine:3.17.3
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
