deployment/k8s/chat-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-app
  namespace: chat-app
spec:
  selector:
    app: chat-app
  ports:
  - port: 9001
    targetPort: 80
