deployment/k8s/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-app
spec:
  selector:
    app: myapp
  ports:
  - port: 6379
    targetPort: 6379
