deployment/k8s/chat-rout.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: chat-app
  name: chat-app
  namespace: chat-app
spec:
  host: ""
  port:
    targetPort: 9001
  to:
    kind: Service
    name: chat-app
    weight: 100
