deployment/k8s/chat-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: king-kong
  # Part of the route
  name: chatservice
  namespace: chat-app
spec:
  host: ""
  port:
    targetPort: 9001
  to:
    kind: Service
    # Target
    name: chat-app
    weight: 100
